# dwc

./: .gitignore  README.md  design.drawio  docker-compose.yml  pyproject.toml
client/: pyproject.toml
client/dwc_client/: chunking.py  cli.py  config.yml  counting.py  kafka.py
data/: lorem6.txt
dwc_dask/: client.py
wc-node/: pyproject.toml
wc-node/dwc_node/: __main__.py
